// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Unbundling aid DW module tests getting unbundling aid data for all receipient countries 1`] = `
"Array [
  Object {
    \\"color\\": \\"lightblue-high\\",
    \\"id\\": \\"VC\\",
    \\"name\\": \\"Saint Vincent & the Grenadines\\",
    \\"value\\": 18457245.90771,
    \\"year\\": 2015,
  },
  Object {
    \\"color\\": \\"lightblue-mid\\",
    \\"id\\": \\"LK\\",
    \\"name\\": \\"Sri Lanka\\",
    \\"value\\": 826930044.611,
    \\"year\\": 2015,
  },
  Object {
    \\"color\\": \\"red-high\\",
    \\"id\\": \\"GA\\",
    \\"name\\": \\"Gabon\\",
    \\"value\\": 116481813.4694,
    \\"year\\": 2015,
  },
  Object {
    \\"color\\": \\"yellow-high\\",
    \\"id\\": \\"DZ\\",
    \\"name\\": \\"Algeria\\",
    \\"value\\": 193714386.267,
    \\"year\\": 2015,
  },
  Object {
    \\"color\\": \\"black-high\\",
    \\"id\\": \\"JO\\",
    \\"name\\": \\"Jordan\\",
    \\"value\\": 2388276979.1674,
    \\"year\\": 2015,
  },
  Object {
    \\"color\\": \\"purple-high\\",
    \\"id\\": \\"BO\\",
    \\"name\\": \\"Bolivia\\",
    \\"value\\": 842094205.5298926,
    \\"year\\": 2015,
  },
  Object {
    \\"color\\": \\"red-high\\",
    \\"id\\": \\"MR\\",
    \\"name\\": \\"Mauritania\\",
    \\"value\\": 388129980.703,
    \\"year\\": 2015,
  },
  Object {
    \\"color\\": \\"red-high\\",
    \\"id\\": \\"MU\\",
    \\"name\\": \\"Mauritius\\",
    \\"value\\": 119394652.4985,
    \\"year\\": 2015,
  },
  Object {
    \\"color\\": \\"purple-high\\",
    \\"id\\": \\"UY\\",
    \\"name\\": \\"Uruguay\\",
    \\"value\\": 48171048.01081,
    \\"year\\": 2015,
  },
  Object {
    \\"color\\": \\"darkorange-high\\",
    \\"id\\": \\"TK\\",
    \\"name\\": \\"Tokelau\\",
    \\"value\\": 8731220.573,
    \\"year\\": 2015,
  },
  Object {
    \\"color\\": \\"darkorange-high\\",
    \\"id\\": \\"PW\\",
    \\"name\\": \\"Palau\\",
    \\"value\\": 13930459.629,
    \\"year\\": 2015,
  },
  Object {
    \\"color\\": \\"darkorange-high\\",
    \\"id\\": \\"TV\\",
    \\"name\\": \\"Tuvalu\\",
    \\"value\\": 50114839.718,
    \\"year\\": 2015,
  },
  Object {
    \\"color\\": \\"lightblue-mid\\",
    \\"id\\": \\"TJ\\",
    \\"name\\": \\"Tajikistan\\",
    \\"value\\": 472227879.329,
    \\"year\\": 2015,
  },
  Object {
    \\"color\\": \\"lightblue-high\\",
    \\"id\\": \\"MX\\",
    \\"name\\": \\"Mexico\\",
    \\"value\\": 503949823.98621,
    \\"year\\": 2015,
  },
  Object {
    \\"color\\": \\"orange-high\\",
    \\"id\\": \\"LA\\",
    \\"name\\": \\"Lao\\",
    \\"value\\": 538885900.5471,
    \\"year\\": 2015,
  },
  Object {
    \\"color\\": \\"darkorange-high\\",
    \\"id\\": \\"FJ\\",
    \\"name\\": \\"Fiji\\",
    \\"value\\": 103492891.8839,
    \\"year\\": 2015,
  },
  Object {
    \\"color\\": \\"lightblue-mid\\",
    \\"id\\": \\"BD\\",
    \\"name\\": \\"Bangladesh\\",
    \\"value\\": 3189680896.0088,
    \\"year\\": 2015,
  },
  Object {
    \\"color\\": \\"lightblue-high\\",
    \\"id\\": \\"AG\\",
    \\"name\\": \\"Antigua & Barbuda\\",
    \\"value\\": 2742702.971,
    \\"year\\": 2015,
  },
  Object {
    \\"color\\": \\"lightblue-high\\",
    \\"id\\": \\"HT\\",
    \\"name\\": \\"Haiti\\",
    \\"value\\": 1054701060.8712,
    \\"year\\": 2015,
  },
  Object {
    \\"color\\": \\"lightblue-high\\",
    \\"id\\": \\"BZ\\",
    \\"name\\": \\"Belize\\",
    \\"value\\": 34633893.0491,
    \\"year\\": 2015,
  },
  Object {
    \\"color\\": \\"red-high\\",
    \\"id\\": \\"SC\\",
    \\"name\\": \\"Seychelles\\",
    \\"value\\": 11411050.954,
    \\"year\\": 2015,
  },
  Object {
    \\"color\\": \\"red-high\\",
    \\"id\\": \\"ZW\\",
    \\"name\\": \\"Zimbabwe\\",
    \\"value\\": 814965906.1001,
    \\"year\\": 2015,
  },
  Object {
    \\"color\\": \\"red-high\\",
    \\"id\\": \\"GM\\",
    \\"name\\": \\"Gambia\\",
    \\"value\\": 128791668.354,
    \\"year\\": 2015,
  },
  Object {
    \\"color\\": \\"red-high\\",
    \\"id\\": \\"CM\\",
    \\"name\\": \\"Cameroon\\",
    \\"value\\": 729258301.799,
    \\"year\\": 2015,
  },
  Object {
    \\"color\\": \\"blue-high\\",
    \\"id\\": \\"BA\\",
    \\"name\\": \\"Bosnia & Herzegovina\\",
    \\"value\\": 517970213.1829,
    \\"year\\": 2015,
  },
  Object {
    \\"color\\": \\"blue-high\\",
    \\"id\\": \\"ex-yugoslavia\\",
    \\"name\\": \\"States Ex-Yugoslavia unspecified\\",
    \\"value\\": 6439929.625,
    \\"year\\": 2015,
  },
  Object {
    \\"color\\": \\"red-high\\",
    \\"id\\": \\"ZA\\",
    \\"name\\": \\"South Africa\\",
    \\"value\\": 1545643546.2013,
    \\"year\\": 2015,
  },
  Object {
    \\"color\\": \\"lightblue-mid\\",
    \\"id\\": \\"BT\\",
    \\"name\\": \\"Bhutan\\",
    \\"value\\": 107773434.1609,
    \\"year\\": 2015,
  },
  Object {
    \\"color\\": \\"red-high\\",
    \\"id\\": \\"LS\\",
    \\"name\\": \\"Lesotho\\",
    \\"value\\": 103623883.45242,
    \\"year\\": 2015,
  },
  Object {
    \\"color\\": \\"darkorange-high\\",
    \\"id\\": \\"NU\\",
    \\"name\\": \\"Niue\\",
    \\"value\\": 19537000.68571,
    \\"year\\": 2015,
  },
  Object {
    \\"color\\": \\"red-high\\",
    \\"id\\": \\"CD\\",
    \\"name\\": \\"DRC\\",
    \\"value\\": 2719315269.8767,
    \\"year\\": 2015,
  },
  Object {
    \\"color\\": \\"red-high\\",
    \\"id\\": \\"NE\\",
    \\"name\\": \\"Niger\\",
    \\"value\\": 899221530.5393,
    \\"year\\": 2015,
  },
  Object {
    \\"color\\": \\"lightblue-mid\\",
    \\"id\\": \\"PK\\",
    \\"name\\": \\"Pakistan\\",
    \\"value\\": 4362842226.27594,
    \\"year\\": 2015,
  },
  Object {
    \\"color\\": \\"lightblue-high\\",
    \\"id\\": \\"CU\\",
    \\"name\\": \\"Cuba\\",
    \\"value\\": 559270119.679,
    \\"year\\": 2015,
  },
  Object {
    \\"color\\": \\"lightblue-high\\",
    \\"id\\": \\"north-central-america\\",
    \\"name\\": \\"North & Central America, regional\\",
    \\"value\\": 438882212.677,
    \\"year\\": 2015,
  },
  Object {
    \\"color\\": \\"blue-high\\",
    \\"id\\": \\"TR\\",
    \\"name\\": \\"Turkey\\",
    \\"value\\": 3194422279.66473,
    \\"year\\": 2015,
  },
  Object {
    \\"color\\": \\"red-high\\",
    \\"id\\": \\"DJ\\",
    \\"name\\": \\"Djibouti\\",
    \\"value\\": 194242955.6511,
    \\"year\\": 2015,
  },
  Object {
    \\"color\\": \\"red-high\\",
    \\"id\\": \\"ML\\",
    \\"name\\": \\"Mali\\",
    \\"value\\": 1281947313.4604,
    \\"year\\": 2015,
  },
  Object {
    \\"color\\": \\"lightblue-high\\",
    \\"id\\": \\"GD\\",
    \\"name\\": \\"Grenada\\",
    \\"value\\": 35756377.725,
    \\"year\\": 2015,
  },
  Object {
    \\"color\\": \\"blue-high\\",
    \\"id\\": \\"BY\\",
    \\"name\\": \\"Belarus\\",
    \\"value\\": 109513117.5573,
    \\"year\\": 2015,
  },
  Object {
    \\"color\\": \\"darkorange-high\\",
    \\"id\\": \\"TO\\",
    \\"name\\": \\"Tonga\\",
    \\"value\\": 71096127.77371,
    \\"year\\": 2015,
  },
  Object {
    \\"color\\": \\"yellow-high\\",
    \\"id\\": \\"EG\\",
    \\"name\\": \\"Egypt\\",
    \\"value\\": 3539847389.1095,
    \\"year\\": 2015,
  },
  Object {
    \\"color\\": \\"lightblue-mid\\",
    \\"id\\": \\"UZ\\",
    \\"name\\": \\"Uzbekistan\\",
    \\"value\\": 501623935.7203,
    \\"year\\": 2015,
  },
  Object {
    \\"color\\": \\"blue-high\\",
    \\"id\\": \\"ME\\",
    \\"name\\": \\"Montenegro\\",
    \\"value\\": 139980604.0061,
    \\"year\\": 2015,
  },
  Object {
    \\"color\\": \\"red-high\\",
    \\"id\\": \\"CI\\",
    \\"name\\": \\"Côte d'Ivoire\\",
    \\"value\\": 989243688.3326,
    \\"year\\": 2015,
  },
  Object {
    \\"color\\": \\"red-high\\",
    \\"id\\": \\"MZ\\",
    \\"name\\": \\"Mozambique\\",
    \\"value\\": 1955340081.03731,
    \\"year\\": 2015,
  },
  Object {
    \\"color\\": \\"darkorange-high\\",
    \\"id\\": \\"PG\\",
    \\"name\\": \\"Papua New Guinea\\",
    \\"value\\": 627657487.7786,
    \\"year\\": 2015,
  },
  Object {
    \\"color\\": \\"\\",
    \\"id\\": \\"bilateral-unspecified\\",
    \\"name\\": \\"Bilateral, unspecified\\",
    \\"value\\": 38027520288.1302,
    \\"year\\": 2015,
  },
  Object {
    \\"color\\": \\"lightblue-mid\\",
    \\"id\\": \\"KZ\\",
    \\"name\\": \\"Kazakhstan\\",
    \\"value\\": 131148137.981,
    \\"year\\": 2015,
  },
  Object {
    \\"color\\": \\"black-high\\",
    \\"id\\": \\"middle-east\\",
    \\"name\\": \\"Middle East, regional\\",
    \\"value\\": 6144011563.8911,
    \\"year\\": 2015,
  },
  Object {
    \\"color\\": \\"orange-high\\",
    \\"id\\": \\"KP\\",
    \\"name\\": \\"North Korea\\",
    \\"value\\": 133805781.14,
    \\"year\\": 2015,
  },
  Object {
    \\"color\\": \\"red-high\\",
    \\"id\\": \\"AO\\",
    \\"name\\": \\"Angola\\",
    \\"value\\": 453352309.8251,
    \\"year\\": 2015,
  },
  Object {
    \\"color\\": \\"lightblue-mid\\",
    \\"id\\": \\"south-central-asia\\",
    \\"name\\": \\"South & Central Asia, regional\\",
    \\"value\\": 202583327.518,
    \\"year\\": 2015,
  },
  Object {
    \\"color\\": \\"purple-high\\",
    \\"id\\": \\"BR\\",
    \\"name\\": \\"Brazil\\",
    \\"value\\": 1182749705.58154,
    \\"year\\": 2015,
  },
  Object {
    \\"color\\": \\"purple-high\\",
    \\"id\\": \\"AR\\",
    \\"name\\": \\"Argentina\\",
    \\"value\\": 147172988.2654,
    \\"year\\": 2015,
  },
  Object {
    \\"color\\": \\"lightblue-mid\\",
    \\"id\\": \\"MM\\",
    \\"name\\": \\"Myanmar\\",
    \\"value\\": 1222794363.39981,
    \\"year\\": 2015,
  },
  Object {
    \\"color\\": \\"red-high\\",
    \\"id\\": \\"SZ\\",
    \\"name\\": \\"Swaziland\\",
    \\"value\\": 105317784.10771,
    \\"year\\": 2015,
  },
  Object {
    \\"color\\": \\"lightblue-high\\",
    \\"id\\": \\"MS\\",
    \\"name\\": \\"Montserrat\\",
    \\"value\\": 53091931.491,
    \\"year\\": 2015,
  },
  Object {
    \\"color\\": \\"purple-high\\",
    \\"id\\": \\"GY\\",
    \\"name\\": \\"Guyana\\",
    \\"value\\": 61724729.6483,
    \\"year\\": 2015,
  },
  Object {
    \\"color\\": \\"orange-high\\",
    \\"id\\": \\"east-asia\\",
    \\"name\\": \\"Far East Asia, regional\\",
    \\"value\\": 317186259.7038,
    \\"year\\": 2015,
  },
  Object {
    \\"color\\": \\"orange-high\\",
    \\"id\\": \\"TL\\",
    \\"name\\": \\"Timor-Leste\\",
    \\"value\\": 212511523.13481,
    \\"year\\": 2015,
  },
  Object {
    \\"color\\": \\"darkorange-high\\",
    \\"id\\": \\"CK\\",
    \\"name\\": \\"Cook Islands\\",
    \\"value\\": 26537347.239,
    \\"year\\": 2015,
  },
  Object {
    \\"color\\": \\"lightblue-mid\\",
    \\"id\\": \\"MV\\",
    \\"name\\": \\"Maldives\\",
    \\"value\\": 38889090.1924,
    \\"year\\": 2015,
  },
  Object {
    \\"color\\": \\"purple-high\\",
    \\"id\\": \\"CO\\",
    \\"name\\": \\"Colombia\\",
    \\"value\\": 1417576291.20011,
    \\"year\\": 2015,
  },
  Object {
    \\"color\\": \\"darkorange-high\\",
    \\"id\\": \\"NR\\",
    \\"name\\": \\"Nauru\\",
    \\"value\\": 31254626.36542,
    \\"year\\": 2015,
  },
  Object {
    \\"color\\": \\"red-high\\",
    \\"id\\": \\"TG\\",
    \\"name\\": \\"Togo\\",
    \\"value\\": 228139827.6171,
    \\"year\\": 2015,
  },
  Object {
    \\"color\\": \\"black-high\\",
    \\"id\\": \\"YE\\",
    \\"name\\": \\"Yemen\\",
    \\"value\\": 1646394906.527,
    \\"year\\": 2015,
  },
  Object {
    \\"color\\": \\"lightblue-high\\",
    \\"id\\": \\"CR\\",
    \\"name\\": \\"Costa Rica\\",
    \\"value\\": 136804141.2685,
    \\"year\\": 2015,
  },
  Object {
    \\"color\\": \\"red-high\\",
    \\"id\\": \\"NA\\",
    \\"name\\": \\"Namibia\\",
    \\"value\\": 180414920.8353,
    \\"year\\": 2015,
  },
  Object {
    \\"color\\": \\"red-high\\",
    \\"id\\": \\"SS\\",
    \\"name\\": \\"South Sudan\\",
    \\"value\\": 1694475839.421,
    \\"year\\": 2015,
  },
  Object {
    \\"color\\": \\"orange-high\\",
    \\"id\\": \\"MN\\",
    \\"name\\": \\"Mongolia\\",
    \\"value\\": 293702778.7494,
    \\"year\\": 2015,
  },
  Object {
    \\"color\\": \\"darkorange-high\\",
    \\"id\\": \\"KI\\",
    \\"name\\": \\"Kiribati\\",
    \\"value\\": 65309446.9301,
    \\"year\\": 2015,
  },
  Object {
    \\"color\\": \\"darkorange-high\\",
    \\"id\\": \\"oceania\\",
    \\"name\\": \\"Oceania, regional\\",
    \\"value\\": 228157420.661,
    \\"year\\": 2015,
  },
  Object {
    \\"color\\": \\"red-high\\",
    \\"id\\": \\"BW\\",
    \\"name\\": \\"Botswana\\",
    \\"value\\": 81012052.16362,
    \\"year\\": 2015,
  },
  Object {
    \\"color\\": \\"purple-high\\",
    \\"id\\": \\"VE\\",
    \\"name\\": \\"Venezuela\\",
    \\"value\\": 41703153.99691,
    \\"year\\": 2015,
  },
  Object {
    \\"color\\": \\"lightblue-mid\\",
    \\"id\\": \\"south-asia\\",
    \\"name\\": \\"South Asia, regional\\",
    \\"value\\": 104880347.6498,
    \\"year\\": 2015,
  },
  Object {
    \\"color\\": \\"red-high\\",
    \\"id\\": \\"CG\\",
    \\"name\\": \\"Congo\\",
    \\"value\\": 131766134.6891,
    \\"year\\": 2015,
  },
  Object {
    \\"color\\": \\"blue-high\\",
    \\"id\\": \\"AL\\",
    \\"name\\": \\"Albania\\",
    \\"value\\": 424181123.2141,
    \\"year\\": 2015,
  },
  Object {
    \\"color\\": \\"black-high\\",
    \\"id\\": \\"IQ\\",
    \\"name\\": \\"Iraq\\",
    \\"value\\": 1497062921.4391,
    \\"year\\": 2015,
  },
  Object {
    \\"color\\": \\"orange-high\\",
    \\"id\\": \\"PH\\",
    \\"name\\": \\"Philippines\\",
    \\"value\\": 1199974330.0555,
    \\"year\\": 2015,
  },
  Object {
    \\"color\\": \\"red-high\\",
    \\"id\\": \\"SD\\",
    \\"name\\": \\"Sudan\\",
    \\"value\\": 1050213641.8969,
    \\"year\\": 2015,
  },
  Object {
    \\"color\\": \\"yellow-high\\",
    \\"id\\": \\"TN\\",
    \\"name\\": \\"Tunisia\\",
    \\"value\\": 893552495.2026,
    \\"year\\": 2015,
  },
  Object {
    \\"color\\": \\"blue-high\\",
    \\"id\\": \\"RS\\",
    \\"name\\": \\"Serbia\\",
    \\"value\\": 729283678.6652,
    \\"year\\": 2015,
  },
  Object {
    \\"color\\": \\"orange-high\\",
    \\"id\\": \\"TH\\",
    \\"name\\": \\"Thailand\\",
    \\"value\\": 327083043.6872088,
    \\"year\\": 2015,
  },
  Object {
    \\"color\\": \\"lightblue-mid\\",
    \\"id\\": \\"central-asia\\",
    \\"name\\": \\"Central Asia, regional\\",
    \\"value\\": 150089798.5302,
    \\"year\\": 2015,
  },
  Object {
    \\"color\\": \\"\\",
    \\"id\\": \\"asia\\",
    \\"name\\": \\"Asia, regional\\",
    \\"value\\": 1241572639.67105,
    \\"year\\": 2015,
  },
  Object {
    \\"color\\": \\"red-high\\",
    \\"id\\": \\"BJ\\",
    \\"name\\": \\"Benin\\",
    \\"value\\": 467501086.226,
    \\"year\\": 2015,
  },
  Object {
    \\"color\\": \\"blue-high\\",
    \\"id\\": \\"MD\\",
    \\"name\\": \\"Moldova\\",
    \\"value\\": 370789249.8834,
    \\"year\\": 2015,
  },
  Object {
    \\"color\\": \\"lightblue-high\\",
    \\"id\\": \\"DO\\",
    \\"name\\": \\"Dominican Republic\\",
    \\"value\\": 347767890.1483,
    \\"year\\": 2015,
  },
  Object {
    \\"color\\": \\"purple-high\\",
    \\"id\\": \\"PY\\",
    \\"name\\": \\"Paraguay\\",
    \\"value\\": 129685413.155,
    \\"year\\": 2015,
  },
  Object {
    \\"color\\": \\"lightblue-mid\\",
    \\"id\\": \\"AF\\",
    \\"name\\": \\"Afghanistan\\",
    \\"value\\": 4304432652.0908,
    \\"year\\": 2015,
  },
  Object {
    \\"color\\": \\"red-high\\",
    \\"id\\": \\"RW\\",
    \\"name\\": \\"Rwanda\\",
    \\"value\\": 1108463663.32131,
    \\"year\\": 2015,
  },
  Object {
    \\"color\\": \\"red-high\\",
    \\"id\\": \\"south-of-sahara\\",
    \\"name\\": \\"South of Sahara, regional\\",
    \\"value\\": 2625984063.44539,
    \\"year\\": 2015,
  },
  Object {
    \\"color\\": \\"red-high\\",
    \\"id\\": \\"NG\\",
    \\"name\\": \\"Nigeria\\",
    \\"value\\": 2538197422.67681,
    \\"year\\": 2015,
  },
  Object {
    \\"color\\": \\"orange-high\\",
    \\"id\\": \\"CN\\",
    \\"name\\": \\"China\\",
    \\"value\\": 1490930237.8675,
    \\"year\\": 2015,
  },
  Object {
    \\"color\\": \\"darkorange-high\\",
    \\"id\\": \\"WS\\",
    \\"name\\": \\"Samoa\\",
    \\"value\\": 102092899.6231,
    \\"year\\": 2015,
  },
  Object {
    \\"color\\": \\"red-high\\",
    \\"id\\": \\"KE\\",
    \\"name\\": \\"Kenya\\",
    \\"value\\": 2761547575.73732,
    \\"year\\": 2015,
  },
  Object {
    \\"color\\": \\"red-high\\",
    \\"id\\": \\"MW\\",
    \\"name\\": \\"Malawi\\",
    \\"value\\": 1105564731.63442,
    \\"year\\": 2015,
  },
  Object {
    \\"color\\": \\"red-high\\",
    \\"id\\": \\"GN\\",
    \\"name\\": \\"Guinea\\",
    \\"value\\": 601873169.949,
    \\"year\\": 2015,
  },
  Object {
    \\"color\\": \\"lightblue-high\\",
    \\"id\\": \\"PA\\",
    \\"name\\": \\"Panama\\",
    \\"value\\": 32002236.5207,
    \\"year\\": 2015,
  },
  Object {
    \\"color\\": \\"red-high\\",
    \\"id\\": \\"MG\\",
    \\"name\\": \\"Madagascar\\",
    \\"value\\": 728602505.5641,
    \\"year\\": 2015,
  },
  Object {
    \\"color\\": \\"orange-high\\",
    \\"id\\": \\"ID\\",
    \\"name\\": \\"Indonesia\\",
    \\"value\\": 2027130655.3552,
    \\"year\\": 2015,
  },
  Object {
    \\"color\\": \\"darkorange-high\\",
    \\"id\\": \\"FM\\",
    \\"name\\": \\"Micronesia\\",
    \\"value\\": 84819420.74271,
    \\"year\\": 2015,
  },
  Object {
    \\"color\\": \\"lightblue-mid\\",
    \\"id\\": \\"AM\\",
    \\"name\\": \\"Armenia\\",
    \\"value\\": 409173900.834,
    \\"year\\": 2015,
  },
  Object {
    \\"color\\": \\"red-high\\",
    \\"id\\": \\"GQ\\",
    \\"name\\": \\"Equatorial Guinea\\",
    \\"value\\": 10975793.5234,
    \\"year\\": 2015,
  },
  Object {
    \\"color\\": \\"blue-high\\",
    \\"id\\": \\"UA\\",
    \\"name\\": \\"Ukraine\\",
    \\"value\\": 1481415215.0011,
    \\"year\\": 2015,
  },
  Object {
    \\"color\\": \\"black-high\\",
    \\"id\\": \\"IR\\",
    \\"name\\": \\"Iran\\",
    \\"value\\": 121962820.29131,
    \\"year\\": 2015,
  },
  Object {
    \\"color\\": \\"purple-high\\",
    \\"id\\": \\"CL\\",
    \\"name\\": \\"Chile\\",
    \\"value\\": 84826171.1616,
    \\"year\\": 2015,
  },
  Object {
    \\"color\\": \\"red-high\\",
    \\"id\\": \\"CF\\",
    \\"name\\": \\"CAR\\",
    \\"value\\": 504983381.426,
    \\"year\\": 2015,
  },
  Object {
    \\"color\\": \\"\\",
    \\"id\\": \\"africa\\",
    \\"name\\": \\"Africa, regional\\",
    \\"value\\": 3545313720.61752,
    \\"year\\": 2015,
  },
  Object {
    \\"color\\": \\"red-high\\",
    \\"id\\": \\"TZ\\",
    \\"name\\": \\"Tanzania\\",
    \\"value\\": 2706164457.66742,
    \\"year\\": 2015,
  },
  Object {
    \\"color\\": \\"red-high\\",
    \\"id\\": \\"SO\\",
    \\"name\\": \\"Somalia\\",
    \\"value\\": 1258707656.7824,
    \\"year\\": 2015,
  },
  Object {
    \\"color\\": \\"red-high\\",
    \\"id\\": \\"TD\\",
    \\"name\\": \\"Chad\\",
    \\"value\\": 1239325318.9576,
    \\"year\\": 2015,
  },
  Object {
    \\"color\\": \\"red-high\\",
    \\"id\\": \\"SH\\",
    \\"name\\": \\"Saint Helena, Ascension & Tristan da Cunha\\",
    \\"value\\": 93883797.74,
    \\"year\\": 2015,
  },
  Object {
    \\"color\\": \\"red-high\\",
    \\"id\\": \\"GW\\",
    \\"name\\": \\"Guinea-Bissau\\",
    \\"value\\": 99169214.76,
    \\"year\\": 2015,
  },
  Object {
    \\"color\\": \\"black-high\\",
    \\"id\\": \\"LB\\",
    \\"name\\": \\"Lebanon\\",
    \\"value\\": 1162866350.452,
    \\"year\\": 2015,
  },
  Object {
    \\"color\\": \\"lightblue-high\\",
    \\"id\\": \\"HN\\",
    \\"name\\": \\"Honduras\\",
    \\"value\\": 599502245.08781,
    \\"year\\": 2015,
  },
  Object {
    \\"color\\": \\"black-high\\",
    \\"id\\": \\"PS\\",
    \\"name\\": \\"Palestine\\",
    \\"value\\": 1878696314.1875,
    \\"year\\": 2015,
  },
  Object {
    \\"color\\": \\"lightblue-mid\\",
    \\"id\\": \\"KG\\",
    \\"name\\": \\"Kyrgyzstan\\",
    \\"value\\": 831357384.97431,
    \\"year\\": 2015,
  },
  Object {
    \\"color\\": \\"yellow-high\\",
    \\"id\\": \\"MA\\",
    \\"name\\": \\"Morocco\\",
    \\"value\\": 1885637592.7049,
    \\"year\\": 2015,
  },
  Object {
    \\"color\\": \\"red-high\\",
    \\"id\\": \\"CV\\",
    \\"name\\": \\"Cape Verde\\",
    \\"value\\": 175126220.98,
    \\"year\\": 2015,
  },
  Object {
    \\"color\\": \\"red-high\\",
    \\"id\\": \\"BF\\",
    \\"name\\": \\"Burkina Faso\\",
    \\"value\\": 1069722665.646,
    \\"year\\": 2015,
  },
  Object {
    \\"color\\": \\"blue-high\\",
    \\"id\\": \\"MK\\",
    \\"name\\": \\"Macedonia\\",
    \\"value\\": 285412959.4156,
    \\"year\\": 2015,
  },
  Object {
    \\"color\\": \\"lightblue-high\\",
    \\"id\\": \\"NI\\",
    \\"name\\": \\"Nicaragua\\",
    \\"value\\": 516517618.9194,
    \\"year\\": 2015,
  },
  Object {
    \\"color\\": \\"blue-high\\",
    \\"id\\": \\"europe\\",
    \\"name\\": \\"Europe, regional\\",
    \\"value\\": 1071072963.8728,
    \\"year\\": 2015,
  },
  Object {
    \\"color\\": \\"lightblue-high\\",
    \\"id\\": \\"LC\\",
    \\"name\\": \\"Saint Lucia\\",
    \\"value\\": 22975352.49071,
    \\"year\\": 2015,
  },
  Object {
    \\"color\\": \\"lightblue-mid\\",
    \\"id\\": \\"NP\\",
    \\"name\\": \\"Nepal\\",
    \\"value\\": 1356514605.846042,
    \\"year\\": 2015,
  },
  Object {
    \\"color\\": \\"red-high\\",
    \\"id\\": \\"UG\\",
    \\"name\\": \\"Uganda\\",
    \\"value\\": 1696501638.9257026,
    \\"year\\": 2015,
  },
  Object {
    \\"color\\": \\"darkorange-high\\",
    \\"id\\": \\"WF\\",
    \\"name\\": \\"Wallis & Futuna\\",
    \\"value\\": 106447487.31,
    \\"year\\": 2015,
  },
  Object {
    \\"color\\": \\"red-high\\",
    \\"id\\": \\"ET\\",
    \\"name\\": \\"Ethiopia\\",
    \\"value\\": 3352722498.06871,
    \\"year\\": 2015,
  },
  Object {
    \\"color\\": \\"purple-high\\",
    \\"id\\": \\"SR\\",
    \\"name\\": \\"Suriname\\",
    \\"value\\": 17461652.791,
    \\"year\\": 2015,
  },
  Object {
    \\"color\\": \\"red-high\\",
    \\"id\\": \\"ER\\",
    \\"name\\": \\"Eritrea\\",
    \\"value\\": 95494544.552,
    \\"year\\": 2015,
  },
  Object {
    \\"color\\": \\"\\",
    \\"id\\": \\"america\\",
    \\"name\\": \\"America, regional\\",
    \\"value\\": 1373826715.8581,
    \\"year\\": 2015,
  },
  Object {
    \\"color\\": \\"lightblue-mid\\",
    \\"id\\": \\"GE\\",
    \\"name\\": \\"Georgia\\",
    \\"value\\": 559053620.135645,
    \\"year\\": 2015,
  },
  Object {
    \\"color\\": \\"red-high\\",
    \\"id\\": \\"KM\\",
    \\"name\\": \\"Comoros\\",
    \\"value\\": 69983438.0702,
    \\"year\\": 2015,
  },
  Object {
    \\"color\\": \\"yellow-high\\",
    \\"id\\": \\"north-of-sahara\\",
    \\"name\\": \\"North of Sahara, regional\\",
    \\"value\\": 330772955.4101,
    \\"year\\": 2015,
  },
  Object {
    \\"color\\": \\"lightblue-high\\",
    \\"id\\": \\"JM\\",
    \\"name\\": \\"Jamaica\\",
    \\"value\\": 104722855.19432,
    \\"year\\": 2015,
  },
  Object {
    \\"color\\": \\"darkorange-high\\",
    \\"id\\": \\"VU\\",
    \\"name\\": \\"Vanuatu\\",
    \\"value\\": 189997948.73261,
    \\"year\\": 2015,
  },
  Object {
    \\"color\\": \\"red-high\\",
    \\"id\\": \\"SL\\",
    \\"name\\": \\"Sierra Leone\\",
    \\"value\\": 1021195776.58641,
    \\"year\\": 2015,
  },
  Object {
    \\"color\\": \\"orange-high\\",
    \\"id\\": \\"MY\\",
    \\"name\\": \\"Malaysia\\",
    \\"value\\": 125023930.4007,
    \\"year\\": 2015,
  },
  Object {
    \\"color\\": \\"yellow-high\\",
    \\"id\\": \\"LY\\",
    \\"name\\": \\"Libya\\",
    \\"value\\": 157764674.09,
    \\"year\\": 2015,
  },
  Object {
    \\"color\\": \\"orange-high\\",
    \\"id\\": \\"VN\\",
    \\"name\\": \\"Viet Nam\\",
    \\"value\\": 3895493299.94611,
    \\"year\\": 2015,
  },
  Object {
    \\"color\\": \\"darkorange-high\\",
    \\"id\\": \\"SB\\",
    \\"name\\": \\"Solomon Islands\\",
    \\"value\\": 196251880.5751,
    \\"year\\": 2015,
  },
  Object {
    \\"color\\": \\"purple-high\\",
    \\"id\\": \\"EC\\",
    \\"name\\": \\"Ecuador\\",
    \\"value\\": 383804916.402,
    \\"year\\": 2015,
  },
  Object {
    \\"color\\": \\"\\",
    \\"id\\": \\"west-indies\\",
    \\"name\\": \\"West Indies, regional\\",
    \\"value\\": 162590892.67071,
    \\"year\\": 2015,
  },
  Object {
    \\"color\\": \\"darkorange-high\\",
    \\"id\\": \\"MH\\",
    \\"name\\": \\"Marshall Islands\\",
    \\"value\\": 59680978.0669,
    \\"year\\": 2015,
  },
  Object {
    \\"color\\": \\"red-high\\",
    \\"id\\": \\"GH\\",
    \\"name\\": \\"Ghana\\",
    \\"value\\": 1882129282.3422,
    \\"year\\": 2015,
  },
  Object {
    \\"color\\": \\"lightblue-mid\\",
    \\"id\\": \\"AZ\\",
    \\"name\\": \\"Azerbaijan\\",
    \\"value\\": 160299119.2983,
    \\"year\\": 2015,
  },
  Object {
    \\"color\\": \\"lightblue-mid\\",
    \\"id\\": \\"IN\\",
    \\"name\\": \\"India\\",
    \\"value\\": 5328901800.89339,
    \\"year\\": 2015,
  },
  Object {
    \\"color\\": \\"lightblue-high\\",
    \\"id\\": \\"SV\\",
    \\"name\\": \\"El Salvador\\",
    \\"value\\": 149694907.24661,
    \\"year\\": 2015,
  },
  Object {
    \\"color\\": \\"orange-high\\",
    \\"id\\": \\"KH\\",
    \\"name\\": \\"Cambodia\\",
    \\"value\\": 756594960.71341,
    \\"year\\": 2015,
  },
  Object {
    \\"color\\": \\"purple-high\\",
    \\"id\\": \\"south-america\\",
    \\"name\\": \\"South America, regional\\",
    \\"value\\": 326725910.8164,
    \\"year\\": 2015,
  },
  Object {
    \\"color\\": \\"red-high\\",
    \\"id\\": \\"ZM\\",
    \\"name\\": \\"Zambia\\",
    \\"value\\": 883234614.914054,
    \\"year\\": 2015,
  },
  Object {
    \\"color\\": \\"black-high\\",
    \\"id\\": \\"SY\\",
    \\"name\\": \\"Syria\\",
    \\"value\\": 4889339854.348,
    \\"year\\": 2015,
  },
  Object {
    \\"color\\": \\"lightblue-high\\",
    \\"id\\": \\"GT\\",
    \\"name\\": \\"Guatemala\\",
    \\"value\\": 455347845.3032026,
    \\"year\\": 2015,
  },
  Object {
    \\"color\\": \\"red-high\\",
    \\"id\\": \\"ST\\",
    \\"name\\": \\"Sao Tome & Principe\\",
    \\"value\\": 53346067.839,
    \\"year\\": 2015,
  },
  Object {
    \\"color\\": \\"red-high\\",
    \\"id\\": \\"SN\\",
    \\"name\\": \\"Senegal\\",
    \\"value\\": 981756115.466768,
    \\"year\\": 2015,
  },
  Object {
    \\"color\\": \\"lightblue-mid\\",
    \\"id\\": \\"TM\\",
    \\"name\\": \\"Turkmenistan\\",
    \\"value\\": 27097053.0161,
    \\"year\\": 2015,
  },
  Object {
    \\"color\\": \\"lightblue-high\\",
    \\"id\\": \\"DM\\",
    \\"name\\": \\"Dominica\\",
    \\"value\\": 21235452.58971,
    \\"year\\": 2015,
  },
  Object {
    \\"color\\": \\"red-high\\",
    \\"id\\": \\"BI\\",
    \\"name\\": \\"Burundi\\",
    \\"value\\": 397197246.9547,
    \\"year\\": 2015,
  },
  Object {
    \\"color\\": \\"purple-high\\",
    \\"id\\": \\"PE\\",
    \\"name\\": \\"Peru\\",
    \\"value\\": 523373971.93911,
    \\"year\\": 2015,
  },
  Object {
    \\"color\\": \\"red-high\\",
    \\"id\\": \\"LR\\",
    \\"name\\": \\"Liberia\\",
    \\"value\\": 1139451949.36391,
    \\"year\\": 2015,
  },
  Object {
    \\"color\\": \\"blue-high\\",
    \\"id\\": \\"XK\\",
    \\"name\\": \\"Kosovo\\",
    \\"value\\": 441689421.7065,
    \\"year\\": 2015,
  },
]"
`;

exports[`Unbundling aid DW module tests getting unbundling aid selection options 1`] = `
"Object {
  \\"channels\\": Array [
    Object {
      \\"id\\": \\"public-sector-unknown\\",
      \\"name\\": \\"Public sector (unknown country)\\",
      \\"old-code\\": \\"A\\",
    },
    Object {
      \\"id\\": \\"public-sector-donor\\",
      \\"name\\": \\"Public sector (donor government)\\",
      \\"old-code\\": \\"B\\",
    },
    Object {
      \\"id\\": \\"public-sector-recipient\\",
      \\"name\\": \\"Public sector (recipient government)\\",
      \\"old-code\\": \\"C\\",
    },
    Object {
      \\"id\\": \\"ngo-unknown\\",
      \\"name\\": \\"NGO (unknown country)\\",
      \\"old-code\\": \\"D\\",
    },
    Object {
      \\"id\\": \\"ngo-donor\\",
      \\"name\\": \\"NGO (donor-country based)\\",
      \\"old-code\\": \\"E\\",
    },
    Object {
      \\"id\\": \\"ngo-recipient\\",
      \\"name\\": \\"NGO (recipient-country based)\\",
      \\"old-code\\": \\"F\\",
    },
    Object {
      \\"id\\": \\"public-private-partnership\\",
      \\"name\\": \\"Public private partnership\\",
      \\"old-code\\": \\"G\\",
    },
    Object {
      \\"id\\": \\"multilateral\\",
      \\"name\\": \\"Multilateral\\",
      \\"old-code\\": \\"H\\",
    },
    Object {
      \\"id\\": \\"other\\",
      \\"name\\": \\"Other (private sector, think-tank, etc.)\\",
      \\"old-code\\": \\"I\\",
    },
    Object {
      \\"id\\": \\"unspecified\\",
      \\"name\\": \\"Unspecified\\",
      \\"old-code\\": \\"J\\",
    },
  ],
  \\"form\\": Array [
    Object {
      \\"color\\": \\"red-high\\",
      \\"id\\": \\"cash-loan-equity\\",
      \\"name\\": \\"Cash (loan/equity)\\",
      \\"old-code\\": \\"A\\",
    },
    Object {
      \\"color\\": \\"red-mid\\",
      \\"id\\": \\"cash-grant\\",
      \\"name\\": \\"Cash grant\\",
      \\"old-code\\": \\"B\\",
    },
    Object {
      \\"color\\": \\"purple-high\\",
      \\"id\\": \\"commodities-food\\",
      \\"name\\": \\"Commodities & Food\\",
      \\"old-code\\": \\"C\\",
    },
    Object {
      \\"color\\": \\"lightblue-mid\\",
      \\"id\\": \\"gpgs-nngos\\",
      \\"name\\": \\"Global Initiatives & NNGOs\\",
      \\"old-code\\": \\"D\\",
    },
    Object {
      \\"color\\": \\"yellow-high\\",
      \\"id\\": \\"mixed-project-aid\\",
      \\"name\\": \\"Mixed project aid\\",
      \\"old-code\\": \\"E\\",
    },
    Object {
      \\"color\\": \\"orange-high\\",
      \\"id\\": \\"non-transfer\\",
      \\"name\\": \\"Non-transfer\\",
      \\"old-code\\": \\"F\\",
    },
    Object {
      \\"color\\": \\"darkblue-mid\\",
      \\"id\\": \\"technical-ooperation\\",
      \\"name\\": \\"Technical cooperation\\",
      \\"old-code\\": \\"G\\",
    },
    Object {
      \\"color\\": \\"black-mid\\",
      \\"id\\": \\"export-credit\\",
      \\"name\\": \\"Export credit\\",
      \\"old-code\\": \\"H\\",
    },
  ],
  \\"from\\": Array [
    Object {
      \\"id\\": \\"AU\\",
      \\"name\\": \\"Australia\\",
    },
    Object {
      \\"id\\": \\"AT\\",
      \\"name\\": \\"Austria\\",
    },
    Object {
      \\"id\\": \\"BE\\",
      \\"name\\": \\"Belgium\\",
    },
    Object {
      \\"id\\": \\"BG\\",
      \\"name\\": \\"Bulgaria\\",
    },
    Object {
      \\"id\\": \\"CA\\",
      \\"name\\": \\"Canada\\",
    },
    Object {
      \\"id\\": \\"HR\\",
      \\"name\\": \\"Croatia\\",
    },
    Object {
      \\"id\\": \\"CY\\",
      \\"name\\": \\"Cyprus\\",
    },
    Object {
      \\"id\\": \\"CZ\\",
      \\"name\\": \\"Czech Republic\\",
    },
    Object {
      \\"id\\": \\"DK\\",
      \\"name\\": \\"Denmark\\",
    },
    Object {
      \\"id\\": \\"EE\\",
      \\"name\\": \\"Estonia\\",
    },
    Object {
      \\"id\\": \\"FI\\",
      \\"name\\": \\"Finland\\",
    },
    Object {
      \\"id\\": \\"FR\\",
      \\"name\\": \\"France\\",
    },
    Object {
      \\"id\\": \\"DE\\",
      \\"name\\": \\"Germany\\",
    },
    Object {
      \\"id\\": \\"GR\\",
      \\"name\\": \\"Greece\\",
    },
    Object {
      \\"id\\": \\"HU\\",
      \\"name\\": \\"Hungary\\",
    },
    Object {
      \\"id\\": \\"IS\\",
      \\"name\\": \\"Iceland\\",
    },
    Object {
      \\"id\\": \\"IE\\",
      \\"name\\": \\"Ireland\\",
    },
    Object {
      \\"id\\": \\"IL\\",
      \\"name\\": \\"Israel\\",
    },
    Object {
      \\"id\\": \\"IT\\",
      \\"name\\": \\"Italy\\",
    },
    Object {
      \\"id\\": \\"JP\\",
      \\"name\\": \\"Japan\\",
    },
    Object {
      \\"id\\": \\"KZ\\",
      \\"name\\": \\"Kazakhstan\\",
    },
    Object {
      \\"id\\": \\"KR\\",
      \\"name\\": \\"Korea\\",
    },
    Object {
      \\"id\\": \\"KW\\",
      \\"name\\": \\"Kuwait\\",
    },
    Object {
      \\"id\\": \\"LV\\",
      \\"name\\": \\"Latvia\\",
    },
    Object {
      \\"id\\": \\"LI\\",
      \\"name\\": \\"Liechtenstein\\",
    },
    Object {
      \\"id\\": \\"LT\\",
      \\"name\\": \\"Lithuania\\",
    },
    Object {
      \\"id\\": \\"LU\\",
      \\"name\\": \\"Luxembourg\\",
    },
    Object {
      \\"id\\": \\"MT\\",
      \\"name\\": \\"Malta\\",
    },
    Object {
      \\"id\\": \\"NL\\",
      \\"name\\": \\"Netherlands\\",
    },
    Object {
      \\"id\\": \\"NZ\\",
      \\"name\\": \\"New Zealand\\",
    },
    Object {
      \\"id\\": \\"NO\\",
      \\"name\\": \\"Norway\\",
    },
    Object {
      \\"id\\": \\"PL\\",
      \\"name\\": \\"Poland\\",
    },
    Object {
      \\"id\\": \\"PT\\",
      \\"name\\": \\"Portugal\\",
    },
    Object {
      \\"id\\": \\"RO\\",
      \\"name\\": \\"Romania\\",
    },
    Object {
      \\"id\\": \\"RU\\",
      \\"name\\": \\"Russian Federation\\",
    },
    Object {
      \\"id\\": \\"SA\\",
      \\"name\\": \\"Saudi Arabia\\",
    },
    Object {
      \\"id\\": \\"SK\\",
      \\"name\\": \\"Slovak Republic\\",
    },
    Object {
      \\"id\\": \\"SI\\",
      \\"name\\": \\"Slovenia\\",
    },
    Object {
      \\"id\\": \\"ES\\",
      \\"name\\": \\"Spain\\",
    },
    Object {
      \\"id\\": \\"SE\\",
      \\"name\\": \\"Sweden\\",
    },
    Object {
      \\"id\\": \\"CH\\",
      \\"name\\": \\"Switzerland\\",
    },
    Object {
      \\"id\\": \\"TW\\",
      \\"name\\": \\"Taiwan\\",
    },
    Object {
      \\"id\\": \\"TH\\",
      \\"name\\": \\"Thailand\\",
    },
    Object {
      \\"id\\": \\"TL\\",
      \\"name\\": \\"Timor-Leste\\",
    },
    Object {
      \\"id\\": \\"TR\\",
      \\"name\\": \\"Turkey\\",
    },
    Object {
      \\"id\\": \\"GB\\",
      \\"name\\": \\"United Kingdom\\",
    },
    Object {
      \\"id\\": \\"AE\\",
      \\"name\\": \\"UAE\\",
    },
    Object {
      \\"id\\": \\"US\\",
      \\"name\\": \\"United States\\",
    },
  ],
  \\"sectors\\": Array [
    Object {
      \\"color\\": \\"red-high\\",
      \\"id\\": \\"agriculture-and-food-security\\",
      \\"name\\": \\"Agriculture and food security\\",
      \\"old-code\\": \\"H\\",
    },
    Object {
      \\"color\\": \\"red-mid\\",
      \\"id\\": \\"banking-and-business\\",
      \\"name\\": \\"Banking and business\\",
      \\"old-code\\": \\"G\\",
    },
    Object {
      \\"color\\": \\"darkred-high\\",
      \\"id\\": \\"debt-relief\\",
      \\"name\\": \\"Debt relief\\",
      \\"old-code\\": \\"M\\",
    },
    Object {
      \\"color\\": \\"black-high\\",
      \\"id\\": \\"education\\",
      \\"name\\": \\"Education\\",
      \\"old-code\\": \\"A\\",
    },
    Object {
      \\"color\\": \\"lightblue-high\\",
      \\"id\\": \\"environment\\",
      \\"name\\": \\"Environment\\",
      \\"old-code\\": \\"J\\",
    },
    Object {
      \\"color\\": \\"purple-mid\\",
      \\"id\\": \\"general-budget-support\\",
      \\"name\\": \\"General budget support\\",
      \\"old-code\\": \\"L\\",
    },
    Object {
      \\"color\\": \\"orange-high\\",
      \\"id\\": \\"governance-and-security\\",
      \\"name\\": \\"Governance and security\\",
      \\"old-code\\": \\"D\\",
    },
    Object {
      \\"color\\": \\"purple-high\\",
      \\"id\\": \\"health\\",
      \\"name\\": \\"Health\\",
      \\"old-code\\": \\"B\\",
    },
    Object {
      \\"color\\": \\"blue-low\\",
      \\"id\\": \\"humanitarian\\",
      \\"name\\": \\"Humanitarian\\",
      \\"old-code\\": \\"N\\",
    },
    Object {
      \\"color\\": \\"darkyellow-high\\",
      \\"id\\": \\"industry-and-trade\\",
      \\"name\\": \\"Industry and trade\\",
      \\"old-code\\": \\"I\\",
    },
    Object {
      \\"color\\": \\"orange-mid\\",
      \\"id\\": \\"infrastructure\\",
      \\"name\\": \\"Infrastructure\\",
      \\"old-code\\": \\"F\\",
    },
    Object {
      \\"color\\": \\"grey-low\\",
      \\"id\\": \\"other\\",
      \\"name\\": \\"Other\\",
      \\"old-code\\": \\"K\\",
    },
    Object {
      \\"color\\": \\"darkblue-mid\\",
      \\"id\\": \\"other-social-services\\",
      \\"name\\": \\"Other social services\\",
      \\"old-code\\": \\"E\\",
    },
    Object {
      \\"color\\": \\"yellow-high\\",
      \\"id\\": \\"water-and-sanitation\\",
      \\"name\\": \\"Water and sanitation\\",
      \\"old-code\\": \\"C\\",
    },
    Object {
      \\"color\\": \\"grey-mid\\",
      \\"id\\": \\"other-sectors-grouped\\",
      \\"name\\": \\"Other sectors (grouped)\\",
      \\"old-code\\": \\"X\\",
    },
  ],
  \\"to\\": Array [
    Object {
      \\"id\\": \\"AF\\",
      \\"name\\": \\"Afghanistan\\",
    },
    Object {
      \\"id\\": \\"AL\\",
      \\"name\\": \\"Albania\\",
    },
    Object {
      \\"id\\": \\"DZ\\",
      \\"name\\": \\"Algeria\\",
    },
    Object {
      \\"id\\": \\"AO\\",
      \\"name\\": \\"Angola\\",
    },
    Object {
      \\"id\\": \\"AI\\",
      \\"name\\": \\"Anguilla\\",
    },
    Object {
      \\"id\\": \\"AG\\",
      \\"name\\": \\"Antigua & Barbuda\\",
    },
    Object {
      \\"id\\": \\"AR\\",
      \\"name\\": \\"Argentina\\",
    },
    Object {
      \\"id\\": \\"AM\\",
      \\"name\\": \\"Armenia\\",
    },
    Object {
      \\"id\\": \\"AZ\\",
      \\"name\\": \\"Azerbaijan\\",
    },
    Object {
      \\"id\\": \\"BH\\",
      \\"name\\": \\"Bahrain\\",
    },
    Object {
      \\"id\\": \\"BD\\",
      \\"name\\": \\"Bangladesh\\",
    },
    Object {
      \\"id\\": \\"BB\\",
      \\"name\\": \\"Barbados\\",
    },
    Object {
      \\"id\\": \\"BY\\",
      \\"name\\": \\"Belarus\\",
    },
    Object {
      \\"id\\": \\"BZ\\",
      \\"name\\": \\"Belize\\",
    },
    Object {
      \\"id\\": \\"BJ\\",
      \\"name\\": \\"Benin\\",
    },
    Object {
      \\"id\\": \\"BT\\",
      \\"name\\": \\"Bhutan\\",
    },
    Object {
      \\"id\\": \\"BO\\",
      \\"name\\": \\"Bolivia\\",
    },
    Object {
      \\"id\\": \\"BA\\",
      \\"name\\": \\"Bosnia & Herzegovina\\",
    },
    Object {
      \\"id\\": \\"BW\\",
      \\"name\\": \\"Botswana\\",
    },
    Object {
      \\"id\\": \\"BR\\",
      \\"name\\": \\"Brazil\\",
    },
    Object {
      \\"id\\": \\"BF\\",
      \\"name\\": \\"Burkina Faso\\",
    },
    Object {
      \\"id\\": \\"BI\\",
      \\"name\\": \\"Burundi\\",
    },
    Object {
      \\"id\\": \\"KH\\",
      \\"name\\": \\"Cambodia\\",
    },
    Object {
      \\"id\\": \\"CM\\",
      \\"name\\": \\"Cameroon\\",
    },
    Object {
      \\"id\\": \\"CV\\",
      \\"name\\": \\"Cape Verde\\",
    },
    Object {
      \\"id\\": \\"CF\\",
      \\"name\\": \\"CAR\\",
    },
    Object {
      \\"id\\": \\"TD\\",
      \\"name\\": \\"Chad\\",
    },
    Object {
      \\"id\\": \\"CL\\",
      \\"name\\": \\"Chile\\",
    },
    Object {
      \\"id\\": \\"CN\\",
      \\"name\\": \\"China\\",
    },
    Object {
      \\"id\\": \\"CO\\",
      \\"name\\": \\"Colombia\\",
    },
    Object {
      \\"id\\": \\"KM\\",
      \\"name\\": \\"Comoros\\",
    },
    Object {
      \\"id\\": \\"CG\\",
      \\"name\\": \\"Congo\\",
    },
    Object {
      \\"id\\": \\"CD\\",
      \\"name\\": \\"DRC\\",
    },
    Object {
      \\"id\\": \\"CK\\",
      \\"name\\": \\"Cook Islands\\",
    },
    Object {
      \\"id\\": \\"CR\\",
      \\"name\\": \\"Costa Rica\\",
    },
    Object {
      \\"id\\": \\"CI\\",
      \\"name\\": \\"Côte d'Ivoire\\",
    },
    Object {
      \\"id\\": \\"country-unspecified\\",
      \\"name\\": \\"Country not specified\\",
    },
    Object {
      \\"id\\": \\"CU\\",
      \\"name\\": \\"Cuba\\",
    },
    Object {
      \\"id\\": \\"DJ\\",
      \\"name\\": \\"Djibouti\\",
    },
    Object {
      \\"id\\": \\"DM\\",
      \\"name\\": \\"Dominica\\",
    },
    Object {
      \\"id\\": \\"DO\\",
      \\"name\\": \\"Dominican Republic\\",
    },
    Object {
      \\"id\\": \\"EC\\",
      \\"name\\": \\"Ecuador\\",
    },
    Object {
      \\"id\\": \\"EG\\",
      \\"name\\": \\"Egypt\\",
    },
    Object {
      \\"id\\": \\"SV\\",
      \\"name\\": \\"El Salvador\\",
    },
    Object {
      \\"id\\": \\"GQ\\",
      \\"name\\": \\"Equatorial Guinea\\",
    },
    Object {
      \\"id\\": \\"ER\\",
      \\"name\\": \\"Eritrea\\",
    },
    Object {
      \\"id\\": \\"ET\\",
      \\"name\\": \\"Ethiopia\\",
    },
    Object {
      \\"id\\": \\"FJ\\",
      \\"name\\": \\"Fiji\\",
    },
    Object {
      \\"id\\": \\"GA\\",
      \\"name\\": \\"Gabon\\",
    },
    Object {
      \\"id\\": \\"GM\\",
      \\"name\\": \\"Gambia\\",
    },
    Object {
      \\"id\\": \\"GE\\",
      \\"name\\": \\"Georgia\\",
    },
    Object {
      \\"id\\": \\"GH\\",
      \\"name\\": \\"Ghana\\",
    },
    Object {
      \\"id\\": \\"GD\\",
      \\"name\\": \\"Grenada\\",
    },
    Object {
      \\"id\\": \\"GT\\",
      \\"name\\": \\"Guatemala\\",
    },
    Object {
      \\"id\\": \\"GN\\",
      \\"name\\": \\"Guinea\\",
    },
    Object {
      \\"id\\": \\"GW\\",
      \\"name\\": \\"Guinea-Bissau\\",
    },
    Object {
      \\"id\\": \\"GY\\",
      \\"name\\": \\"Guyana\\",
    },
    Object {
      \\"id\\": \\"HT\\",
      \\"name\\": \\"Haiti\\",
    },
    Object {
      \\"id\\": \\"HN\\",
      \\"name\\": \\"Honduras\\",
    },
    Object {
      \\"id\\": \\"IN\\",
      \\"name\\": \\"India\\",
    },
    Object {
      \\"id\\": \\"ID\\",
      \\"name\\": \\"Indonesia\\",
    },
    Object {
      \\"id\\": \\"IR\\",
      \\"name\\": \\"Iran\\",
    },
    Object {
      \\"id\\": \\"IQ\\",
      \\"name\\": \\"Iraq\\",
    },
    Object {
      \\"id\\": \\"JM\\",
      \\"name\\": \\"Jamaica\\",
    },
    Object {
      \\"id\\": \\"JO\\",
      \\"name\\": \\"Jordan\\",
    },
    Object {
      \\"id\\": \\"KZ\\",
      \\"name\\": \\"Kazakhstan\\",
    },
    Object {
      \\"id\\": \\"KE\\",
      \\"name\\": \\"Kenya\\",
    },
    Object {
      \\"id\\": \\"KI\\",
      \\"name\\": \\"Kiribati\\",
    },
    Object {
      \\"id\\": \\"KP\\",
      \\"name\\": \\"North Korea\\",
    },
    Object {
      \\"id\\": \\"XK\\",
      \\"name\\": \\"Kosovo\\",
    },
    Object {
      \\"id\\": \\"KG\\",
      \\"name\\": \\"Kyrgyzstan\\",
    },
    Object {
      \\"id\\": \\"LA\\",
      \\"name\\": \\"Lao\\",
    },
    Object {
      \\"id\\": \\"LB\\",
      \\"name\\": \\"Lebanon\\",
    },
    Object {
      \\"id\\": \\"LS\\",
      \\"name\\": \\"Lesotho\\",
    },
    Object {
      \\"id\\": \\"LR\\",
      \\"name\\": \\"Liberia\\",
    },
    Object {
      \\"id\\": \\"LY\\",
      \\"name\\": \\"Libya\\",
    },
    Object {
      \\"id\\": \\"MK\\",
      \\"name\\": \\"Macedonia\\",
    },
    Object {
      \\"id\\": \\"MG\\",
      \\"name\\": \\"Madagascar\\",
    },
    Object {
      \\"id\\": \\"MW\\",
      \\"name\\": \\"Malawi\\",
    },
    Object {
      \\"id\\": \\"MY\\",
      \\"name\\": \\"Malaysia\\",
    },
    Object {
      \\"id\\": \\"MV\\",
      \\"name\\": \\"Maldives\\",
    },
    Object {
      \\"id\\": \\"ML\\",
      \\"name\\": \\"Mali\\",
    },
    Object {
      \\"id\\": \\"MH\\",
      \\"name\\": \\"Marshall Islands\\",
    },
    Object {
      \\"id\\": \\"MR\\",
      \\"name\\": \\"Mauritania\\",
    },
    Object {
      \\"id\\": \\"MU\\",
      \\"name\\": \\"Mauritius\\",
    },
    Object {
      \\"id\\": \\"YT\\",
      \\"name\\": \\"Mayotte\\",
    },
    Object {
      \\"id\\": \\"MX\\",
      \\"name\\": \\"Mexico\\",
    },
    Object {
      \\"id\\": \\"FM\\",
      \\"name\\": \\"Micronesia\\",
    },
    Object {
      \\"id\\": \\"MD\\",
      \\"name\\": \\"Moldova\\",
    },
    Object {
      \\"id\\": \\"MN\\",
      \\"name\\": \\"Mongolia\\",
    },
    Object {
      \\"id\\": \\"ME\\",
      \\"name\\": \\"Montenegro\\",
    },
    Object {
      \\"id\\": \\"MS\\",
      \\"name\\": \\"Montserrat\\",
    },
    Object {
      \\"id\\": \\"MA\\",
      \\"name\\": \\"Morocco\\",
    },
    Object {
      \\"id\\": \\"MZ\\",
      \\"name\\": \\"Mozambique\\",
    },
    Object {
      \\"id\\": \\"MM\\",
      \\"name\\": \\"Myanmar\\",
    },
    Object {
      \\"id\\": \\"NA\\",
      \\"name\\": \\"Namibia\\",
    },
    Object {
      \\"id\\": \\"NR\\",
      \\"name\\": \\"Nauru\\",
    },
    Object {
      \\"id\\": \\"NP\\",
      \\"name\\": \\"Nepal\\",
    },
    Object {
      \\"id\\": \\"NI\\",
      \\"name\\": \\"Nicaragua\\",
    },
    Object {
      \\"id\\": \\"NE\\",
      \\"name\\": \\"Niger\\",
    },
    Object {
      \\"id\\": \\"NG\\",
      \\"name\\": \\"Nigeria\\",
    },
    Object {
      \\"id\\": \\"NU\\",
      \\"name\\": \\"Niue\\",
    },
    Object {
      \\"id\\": \\"OM\\",
      \\"name\\": \\"Oman\\",
    },
    Object {
      \\"id\\": \\"PK\\",
      \\"name\\": \\"Pakistan\\",
    },
    Object {
      \\"id\\": \\"PW\\",
      \\"name\\": \\"Palau\\",
    },
    Object {
      \\"id\\": \\"PS\\",
      \\"name\\": \\"Palestine\\",
    },
    Object {
      \\"id\\": \\"PA\\",
      \\"name\\": \\"Panama\\",
    },
    Object {
      \\"id\\": \\"PG\\",
      \\"name\\": \\"Papua New Guinea\\",
    },
    Object {
      \\"id\\": \\"PY\\",
      \\"name\\": \\"Paraguay\\",
    },
    Object {
      \\"id\\": \\"PE\\",
      \\"name\\": \\"Peru\\",
    },
    Object {
      \\"id\\": \\"PH\\",
      \\"name\\": \\"Philippines\\",
    },
    Object {
      \\"id\\": \\"RW\\",
      \\"name\\": \\"Rwanda\\",
    },
    Object {
      \\"id\\": \\"SH\\",
      \\"name\\": \\"Saint Helena, Ascension & Tristan da Cunha\\",
    },
    Object {
      \\"id\\": \\"KN\\",
      \\"name\\": \\"Saint Kitts and Nevis\\",
    },
    Object {
      \\"id\\": \\"LC\\",
      \\"name\\": \\"Saint Lucia\\",
    },
    Object {
      \\"id\\": \\"VC\\",
      \\"name\\": \\"Saint Vincent & the Grenadines\\",
    },
    Object {
      \\"id\\": \\"WS\\",
      \\"name\\": \\"Samoa\\",
    },
    Object {
      \\"id\\": \\"ST\\",
      \\"name\\": \\"Sao Tome & Principe\\",
    },
    Object {
      \\"id\\": \\"SN\\",
      \\"name\\": \\"Senegal\\",
    },
    Object {
      \\"id\\": \\"RS\\",
      \\"name\\": \\"Serbia\\",
    },
    Object {
      \\"id\\": \\"SC\\",
      \\"name\\": \\"Seychelles\\",
    },
    Object {
      \\"id\\": \\"SL\\",
      \\"name\\": \\"Sierra Leone\\",
    },
    Object {
      \\"id\\": \\"SB\\",
      \\"name\\": \\"Solomon Islands\\",
    },
    Object {
      \\"id\\": \\"SO\\",
      \\"name\\": \\"Somalia\\",
    },
    Object {
      \\"id\\": \\"ZA\\",
      \\"name\\": \\"South Africa\\",
    },
    Object {
      \\"id\\": \\"SS\\",
      \\"name\\": \\"South Sudan\\",
    },
    Object {
      \\"id\\": \\"LK\\",
      \\"name\\": \\"Sri Lanka\\",
    },
    Object {
      \\"id\\": \\"SD\\",
      \\"name\\": \\"Sudan\\",
    },
    Object {
      \\"id\\": \\"SR\\",
      \\"name\\": \\"Suriname\\",
    },
    Object {
      \\"id\\": \\"SZ\\",
      \\"name\\": \\"Swaziland\\",
    },
    Object {
      \\"id\\": \\"SY\\",
      \\"name\\": \\"Syria\\",
    },
    Object {
      \\"id\\": \\"TJ\\",
      \\"name\\": \\"Tajikistan\\",
    },
    Object {
      \\"id\\": \\"TZ\\",
      \\"name\\": \\"Tanzania\\",
    },
    Object {
      \\"id\\": \\"TH\\",
      \\"name\\": \\"Thailand\\",
    },
    Object {
      \\"id\\": \\"TL\\",
      \\"name\\": \\"Timor-Leste\\",
    },
    Object {
      \\"id\\": \\"TG\\",
      \\"name\\": \\"Togo\\",
    },
    Object {
      \\"id\\": \\"TK\\",
      \\"name\\": \\"Tokelau\\",
    },
    Object {
      \\"id\\": \\"TO\\",
      \\"name\\": \\"Tonga\\",
    },
    Object {
      \\"id\\": \\"TT\\",
      \\"name\\": \\"Trinidad & Tobago\\",
    },
    Object {
      \\"id\\": \\"TN\\",
      \\"name\\": \\"Tunisia\\",
    },
    Object {
      \\"id\\": \\"TR\\",
      \\"name\\": \\"Turkey\\",
    },
    Object {
      \\"id\\": \\"TM\\",
      \\"name\\": \\"Turkmenistan\\",
    },
    Object {
      \\"id\\": \\"TC\\",
      \\"name\\": \\"Turks & Caicos Islands\\",
    },
    Object {
      \\"id\\": \\"TV\\",
      \\"name\\": \\"Tuvalu\\",
    },
    Object {
      \\"id\\": \\"UG\\",
      \\"name\\": \\"Uganda\\",
    },
    Object {
      \\"id\\": \\"UA\\",
      \\"name\\": \\"Ukraine\\",
    },
    Object {
      \\"id\\": \\"UY\\",
      \\"name\\": \\"Uruguay\\",
    },
    Object {
      \\"id\\": \\"UZ\\",
      \\"name\\": \\"Uzbekistan\\",
    },
    Object {
      \\"id\\": \\"VU\\",
      \\"name\\": \\"Vanuatu\\",
    },
    Object {
      \\"id\\": \\"VE\\",
      \\"name\\": \\"Venezuela\\",
    },
    Object {
      \\"id\\": \\"VN\\",
      \\"name\\": \\"Viet Nam\\",
    },
    Object {
      \\"id\\": \\"WF\\",
      \\"name\\": \\"Wallis & Futuna\\",
    },
    Object {
      \\"id\\": \\"YE\\",
      \\"name\\": \\"Yemen\\",
    },
    Object {
      \\"id\\": \\"ZM\\",
      \\"name\\": \\"Zambia\\",
    },
    Object {
      \\"id\\": \\"ZW\\",
      \\"name\\": \\"Zimbabwe\\",
    },
  ],
  \\"years\\": Array [],
}"
`;

exports[`Unbundling aid DW module tests should create sql query args for getting data 1`] = `
"Object {
  \\"year\\": 2015,
}"
`;
